# ai-cv-review-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: deploy-hostinger.yml
cv_review_agent/: __init__.py  agent.py  export.py  parsers.py  schemas.py  scoring.py  storage.py
evals/: cases.jsonl  run_local.py
scripts/: deploy-hostinger.sh
tests/: test_agent_ids.py  test_auth.py  test_candidate_actions.py  test_deployment_config.py  test_export.py  test_parsers.py  test_resume_files.py  test_scoring.py  test_templates.py
