[project]
name = "ai-cv-review-agent"
version = "0.1.0"
description = "Local AI CV review and job matching agent."
requires-python = ">=3.9"
dependencies = [
    "openai-agents>=0.2.0",
    "pydantic>=2.6",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cv_review_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
